; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby/src/extr_state.c_mrb_alloca_free.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby/src/extr_state.c_mrb_alloca_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.alloca_header* }
%struct.alloca_header = type { %struct.alloca_header* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*)* @mrb_alloca_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mrb_alloca_free(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca %struct.alloca_header*, align 8
  %4 = alloca %struct.alloca_header*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %6 = icmp eq %struct.TYPE_4__* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  br label %23

8:                                                ; preds = %1
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load %struct.alloca_header*, %struct.alloca_header** %10, align 8
  store %struct.alloca_header* %11, %struct.alloca_header** %3, align 8
  br label %12

12:                                               ; preds = %15, %8
  %13 = load %struct.alloca_header*, %struct.alloca_header** %3, align 8
  %14 = icmp ne %struct.alloca_header* %13, null
  br i1 %14, label %15, label %23

15:                                               ; preds = %12
  %16 = load %struct.alloca_header*, %struct.alloca_header** %3, align 8
  store %struct.alloca_header* %16, %struct.alloca_header** %4, align 8
  %17 = load %struct.alloca_header*, %struct.alloca_header** %3, align 8
  %18 = getelementptr inbounds %struct.alloca_header, %struct.alloca_header* %17, i32 0, i32 0
  %19 = load %struct.alloca_header*, %struct.alloca_header** %18, align 8
  store %struct.alloca_header* %19, %struct.alloca_header** %3, align 8
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %21 = load %struct.alloca_header*, %struct.alloca_header** %4, align 8
  %22 = call i32 @mrb_free(%struct.TYPE_4__* %20, %struct.alloca_header* %21)
  br label %12

23:                                               ; preds = %7, %12
  ret void
}

declare dso_local i32 @mrb_free(%struct.TYPE_4__*, %struct.alloca_header*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
